--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 .navbar{ background-color: white;
     border: 1px solid #ddd;}
 
-/* h1 (or name) the main header of this website */
+/* navbar header*/
 .navbar-header
     { color: white;
     background-color:#4aaaa5;
@@ -11,15 +11,13 @@
     padding: 25px;
     font-size:30px;} 
 
-    /* links to other pages  */
-
+   /* links to other pages  */
  .navbar-right{
      font-size: 18px;
      margin-right: 30px;
      padding: 20px;
     
  }  
-
 
  /* background of document center content */
  .wrapper { width:100%;
@@ -28,7 +26,7 @@
 margin-top:-20px;
 }
 
- 
+ /* left center content */
 
 #center{
    margin-top:40px;
@@ -37,15 +35,12 @@ margin-top:-20px;
     border: 1px solid rgb(235, 229, 229); 
 }
 
-.page-header{ color:  #4aaaa5;
-
-
-    
+.page-header{ color:  #4aaaa5;   
 }
 
  .page-body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 18px;
     color: #777;
     background-color: white !important;
   }
@@ -58,7 +53,7 @@ margin-top:-20px;
 /* Headers styling with CSS  */
  h3{ color:  #4aaaa5;
     font-size: 25px;
-    text-align: left;
+    text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;} 
 .panel{
     margin-top:40px !important;
@@ -93,3 +88,36 @@ padding:20px;
    width: 100%;
    margin: 0 auto;
   } 
+
+
+  .game {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    margin-left:30px;
+    margin-right:30px;
+    overflow: auto;
+  }
+  .game img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.95;
+
+  }
+
+
+.game h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
+  
