--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
-/* navbar modification */
-.navbar{ background-color: white;
-    border: 1px solid #ddd;}
+/* body properties */
+body{
+background: url("../images/dust_scratches.png")no-repeat center center fixed;
+background-size: cover;
+}
 
 /* navbar header*/
-.navbar-header
-    { color: white;
-    background-color:#4aaaa5;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align-last: center;
-    padding: 25px;
-    font-size:30px;} 
+#name{
+  color: white;
+  background-color:#4aaaa5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align-last: center;
+  padding: 20px;
+  font-size:36px;
+}
+
 
    /* links to other pages  */
  .navbar-right{
@@ -18,14 +22,10 @@
      padding: 20px;
     
  }  
-
- /* background of document center content */
- .wrapper { width:100%;
-   height:100% !important; 
-    background-image:url(/Users/ornelahunda/Bootstrap-Portfolio/assets/images/dust_scratches.png) !important;
-margin-top:-20px;
+#content{
+margin-top: 120px;
+margin-bottom: -250px;
 }
-
  /* left center content */
 
 #center{
@@ -79,7 +79,6 @@ padding:20px;
 
  footer {
     padding: 30px 0;
-    clear: both;
     background: #666666;
      color:#dad6d6;
      font-size: 15px;
@@ -87,6 +86,11 @@ padding:20px;
    clear: both;
    width: 100%;
    margin: 0 auto;
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
   } 
 
 
